fixing spacing and styling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,12 +29,11 @@ body {
 .cookieCard {
   width: 300px;
   height: 200px;
-  background: linear-gradient(to right,rgb(0, 1, 1),rgb(175, 152, 255));
+  background: linear-gradient(to right,rgb(0, 1, 1),rgb(192, 192, 192));
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  gap: 20px;
   padding: 1rem;
   position: relative;
   overflow: hidden;
@@ -45,7 +44,6 @@ body {
   width: 150px;
   height: 150px;
   content: "";
-  background: linear-gradient(to right,rgb(142, 110, 255),rgb(208, 195, 255));
   position: absolute;
   z-index: 1;
   border-radius: 50%;
